lang/lc/tests/err_attr_val.sys
system s (bool x1, bool x2, bool x3, bool x4) 
{
  attribute probability(x1) = x1 ? 0.5 : 0.5;
  attribute probability(x2) = x2 ? 0.25 : 0.75;
  attribute probability(x3) = x3 ? 0.75 : 0.25;
  attribute probability(x4) = x4 ? 0.01 : 0.99;

  attribute health(x1) = 0.5;
  attribute health(x2) = 0.25;
  attribute health(x3) = 0.75;
  attribute health(x4) = 0.01;

  x1 = false;
  x2 = false;
  x3 = false;
  x4 = false;
}
